# history-docent-rag

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: chunking.default.yaml  voice_provider_candidates.yaml
data_samples/: chunking_quality_sample.json  data_manifest_sample.json  normalized_blocks_sample.json  parser_quality_sample.json  place_catalog_seed.json  source_inventory_sample.json  voice_benchmark_scripts.sample.jsonl  voice_tts_smoke_scripts.sample.jsonl
docs/: ACTIVE_ROUTE_FLAG_DRY_RUN_CONTRACT.md  ACTIVE_ROUTE_SHADOW_EVALUATION.md  ACTIVE_ROUTING_DECISION_PLAN.md  API_RESPONSE_SAMPLE.md  BM25_BASELINE_PLAN.md  CHECKLIST.md  CHUNKING_DECISION_REVIEW.md  CHUNKING_GATES.md  CHUNKING_QUALITY_REPORT.md  CHUNKING_STRATEGY.md  COLBERT_LATE_INTERACTION_EXECUTION_APPROVAL.md  COLBERT_LATE_INTERACTION_HARD_SUBSET.md  COLBERT_LATE_INTERACTION_PLAN.md  DATA_CONTRACTS.md  DATA_POLICY.md  DEMO_RECORDING_CHECKLIST.md  EVALUATION_PLAN.md  EVAL_GATES.md  EXECUTION_STRATEGY.md  FINAL_ABLATION_REPORT.md  GENERATION_FAILURE_ANALYSIS.md  GITHUB_PUSH_EXECUTION_APPROVAL.md  GITHUB_PUSH_READINESS.md  GITHUB_PUSH_READINESS_V2.md  GRAPHRAG_LITE_RELATIONSHIP_PLAN.md  HYDE_LARGER_DEV_SUBSET_READINESS.md  HYDE_LARGER_LIVE_PAIRED_RETRIEVAL_COMPARISON.md  HYDE_LIVE_PAIRED_RETRIEVAL_COMPARISON.md  HYDE_SUBSET_READINESS.md  LOCKED_RETRIEVAL_EXECUTION_APPROVAL.md  LOCKED_RETRIEVAL_PAIRED_COMPARISON.md  LOCKED_RETRIEVAL_READINESS.md  LOCKED_RETRIEVAL_VALIDATION_PLAN.md  NORMALIZATION.md  NOTEBOOK_GUIDE.md  PARSER_QUALITY_REPORT.md  PLACE_CATALOG.md  PLACE_STORY_GUARDRAIL_ROUTER_PLAN.md  PLACE_STORY_HARD_CASE_ANALYSIS.md  PLACE_STORY_TARGETED_CHUNK_AUDIT.md  (+88 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+462 files in other folders)
